--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,19 @@
+@import "tailwindcss";
+
 * {
-    margin: 0px;
-    padding: 0px; 
-    box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
+body {
+  background-color: rgb(24, 24, 24);
+  color: white;
+  display: grid;
+}
+
+img {
+  border-radius: 10px;
+  border: 5px solid rgba(0, 0, 0, 0.342);
+}
